[package]
name = "t420babe"
version = "0.0.0"
authors = ["t420babe <t420babe@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
js-sys = "0.3.45"
wasm-bindgen = "0.2.68"

[dependencies.web-sys]
version = "0.3.45"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
